// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for open: false, background: canvas and dismissButton: false 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), overlay var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out), transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
}
.sheet:dir(rtl) {
  transform: translateY(25vh);
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, background: canvas and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-md)), background-color var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), backdrop-filter var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out), overlay var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-out) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out), transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
}
.sheet:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, background: canvas and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  transition: visibility 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), overlay var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in), transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, background: surface and dismissButton: true 1`] = `
":host {
  display: contents;
  --ref-p-sheet-pt: var(--p-spacing-fluid-md) !important;
  --ref-p-sheet-pb: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md)) !important;
  --ref-p-sheet-px: var(--p-spacing-fluid-lg) !important;
  --pds-internal-grid-outer-column: calc(var(--p-spacing-fluid-lg) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(var(--p-spacing-fluid-lg) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_p-dialog-a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  transition: visibility 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration,0s), background-color var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), -webkit-backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), backdrop-filter var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in), overlay var(--p-transition-duration,var(--p-duration-lg)) var(--p-ease-in) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.sheet {
  position: relative;
  display: grid;
  grid-template: auto/var(--p-spacing-fluid-sm) minmax(0,1fr) var(--p-spacing-fluid-sm);
  gap: var(--p-spacing-fluid-md) calc(var(--p-spacing-fluid-lg) - var(--p-spacing-fluid-sm));
  padding-top: var(--p-spacing-fluid-md);
  padding-bottom: calc(var(--p-radius-3xl) + var(--p-spacing-fluid-md));
  align-content: flex-start;
  clip-path: inset(0 round var(--p-radius-3xl) var(--p-radius-3xl) 0 0);
  color: var(--p-color-primary);
  background: var(--_p-dialog-a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in), transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in);
  width: 100%;
  align-self: flex-end;
  margin-block-start: var(--p-spacing-fluid-lg);
  border-top-left-radius: var(--p-radius-3xl);
  border-top-right-radius: var(--p-radius-3xl);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: var(--p-spacing-fluid-sm);
  margin-top: calc(-1 * var(--p-spacing-fluid-md) + var(--p-spacing-fluid-sm));
  margin-inline-end: var(--p-spacing-fluid-sm);
  place-self: flex-start flex-end;
  filter: invert(1) brightness(1.02);
}
@media(forced-colors:active) {
  .sheet {
    border-top: 2px solid CanvasText;
  }
}
"
`;
